Wed Jan  6 04:24:14 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * docs/design/SCALE:

          Added scalability discussion.

Tue Jan  5 16:01:24 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpConnection.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConnection.inl:
        * dds/DCPS/transport/simpleTCP/SimpleTcpReceiveStrategy.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpReceiveStrategy.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpSendStrategy.h:

          Adjusted the includes to fix compilation errors on solaris
          builds.

Tue Jan  5 00:10:27 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * bin/PerlDDS/Cross_Sync.pm:
        * bin/PerlDDS/Cross_Sync_Common.pm:
        * bin/PerlDDS/Process_Java.pm:
        * bin/PerlDDS/Run_Test.pm:

          Moved CrossSync.pm, CrossSyncDDS.pm, JavaProcess.pm, and
          DDS_Run_Test.pm into PerlDDS package; renamed as necessary.

        * docs/html/federation/federation.html:
        * docs/html/multicast/multicast.html:
        * docs/html/template/template.html:

          Renamed HTML documents.

Mon Jan  4 22:51:20 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Enabled notify_subscription_disconnected and
          notify_subscription_lost callback for built-in-topic
          datareader. This is needed for failover repository
          detection.

        * dds/DCPS/FailoverListener.cpp:

          Added repository recovery call upon
          on_subscription_disconnected callback.

        * dds/DCPS/Service_Participant.cpp:
        * dds/DCPS/Service_Participant.h:

          Added attach_participant bool parameter to several methods
          (e.g. remap_domain). If flag is false, it will not invoke
          attach_participant() on repo. This invocation cause failure
          for odds_monitor in some test scenarios. Those method defaults